--- a/codemaster.ipynb
+++ b/codemaster.ipynb
@@ -13,103 +13,7 @@
       "name": "python3",
       "display_name": "Python 3"
     },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "a1fb614a3b2f4d26bf90cbec4b2eda3f": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "FloatSliderModel",
-          "state": {
-            "_view_name": "FloatSliderView",
-            "style": "IPY_MODEL_733eab51ef4442b7b331194b3ca78369",
-            "_dom_classes": [],
-            "description": "[JAV] [Uncensored] MIDE-193 [1080p] 4305.15 kB/s downloading",
-            "step": 0.01,
-            "_model_name": "FloatSliderModel",
-            "orientation": "horizontal",
-            "max": 100,
-            "_view_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "value": 5.048099905252457,
-            "_view_count": null,
-            "disabled": true,
-            "_view_module_version": "1.5.0",
-            "min": 0,
-            "continuous_update": true,
-            "readout_format": ".2f",
-            "description_tooltip": null,
-            "readout": true,
-            "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_9a1ff7e23f834bfcb28bb0d670109e31"
-          }
-        },
-        "733eab51ef4442b7b331194b3ca78369": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "SliderStyleModel",
-          "state": {
-            "_view_name": "StyleView",
-            "handle_color": null,
-            "_model_name": "SliderStyleModel",
-            "description_width": "initial",
-            "_view_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.5.0",
-            "_view_count": null,
-            "_view_module_version": "1.2.0",
-            "_model_module": "@jupyter-widgets/controls"
-          }
-        },
-        "9a1ff7e23f834bfcb28bb0d670109e31": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "state": {
-            "_view_name": "LayoutView",
-            "grid_template_rows": null,
-            "right": null,
-            "justify_content": null,
-            "_view_module": "@jupyter-widgets/base",
-            "overflow": null,
-            "_model_module_version": "1.2.0",
-            "_view_count": null,
-            "flex_flow": null,
-            "width": "auto",
-            "min_width": null,
-            "border": null,
-            "align_items": null,
-            "bottom": null,
-            "_model_module": "@jupyter-widgets/base",
-            "top": null,
-            "grid_column": null,
-            "overflow_y": null,
-            "overflow_x": null,
-            "grid_auto_flow": null,
-            "grid_area": null,
-            "grid_template_columns": null,
-            "flex": null,
-            "_model_name": "LayoutModel",
-            "justify_items": null,
-            "grid_row": null,
-            "max_height": null,
-            "align_content": null,
-            "visibility": null,
-            "align_self": null,
-            "height": null,
-            "min_height": null,
-            "padding": null,
-            "grid_auto_rows": null,
-            "grid_gap": null,
-            "max_width": null,
-            "order": null,
-            "_view_module_version": "1.2.0",
-            "grid_template_areas": null,
-            "object_position": null,
-            "object_fit": null,
-            "grid_auto_columns": null,
-            "margin": null,
-            "display": null,
-            "left": null
-          }
-        }
-      }
-    }
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -159,18 +63,18 @@
       "metadata": {
         "colab_type": "code",
         "id": "nBwi7LSecKzG",
+        "outputId": "8cbfa61b-2e0b-4571-9159-bdd8c83c75be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 124
-        },
-        "outputId": "8cbfa61b-2e0b-4571-9159-bdd8c83c75be"
+        }
       },
       "source": [
         "from google.colab import drive\n",
         "\n",
         "drive.mount(\"/content/drive\")"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,11 +104,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "m6hF0emftx4h",
+        "outputId": "6c7034d9-d817-4331-e4f1-2ff56f25ee11",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 538
-        },
-        "outputId": "6c7034d9-d817-4331-e4f1-2ff56f25ee11"
+        }
       },
       "source": [
         "!apt install python3-libtorrent\n",
@@ -215,7 +119,7 @@
         "ses.listen_on(6881, 6891)\n",
         "downloads = []"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,11 +206,11 @@
       "metadata": {
         "id": "Cwi1GMlxy3te",
         "colab_type": "code",
+        "outputId": "9dadb6cd-bc84-4400-8283-4e35933edd9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "9dadb6cd-bc84-4400-8283-4e35933edd9b"
+        }
       },
       "source": [
         "params = {\"save_path\": \"/content/drive/My Drive/Torrent\"}\n",
@@ -319,7 +223,7 @@
         "        lt.add_magnet_uri(ses, magnet_link, params)\n",
         "    )\n"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,16 +251,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "DBNoYYoSuDBT",
+        "outputId": "f516856f-f789-4bbb-cd22-792ea9dda561",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 49,
-          "referenced_widgets": [
-            "a1fb614a3b2f4d26bf90cbec4b2eda3f",
-            "733eab51ef4442b7b331194b3ca78369",
-            "9a1ff7e23f834bfcb28bb0d670109e31"
-          ]
-        },
-        "outputId": "dd1559ca-6870-4fad-f813-ec7b6db1fb3e"
+          "height": 241
+        }
       },
       "source": [
         "import time\n",
@@ -412,20 +311,15 @@
       "execution_count": 0,
       "outputs": [
         {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "a1fb614a3b2f4d26bf90cbec4b2eda3f",
-              "version_minor": 0,
-              "version_major": 2
-            },
-            "text/plain": [
-              "FloatSlider(value=0.0, disabled=True, layout=Layout(width='auto'), step=0.01, style=SliderStyle(description_wi…"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-4fb61c2df196>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mstep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.01\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdisabled\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlayout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstyle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstyle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     )\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdownloads\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m ]\n\u001b[1;32m     24\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdownload_bars\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'downloads' is not defined"
+          ]
         }
       ]
     },
