--- a/codemaster.ipynb
+++ b/codemaster.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "codemaster",
+      "name": "Torrent To Google Drive Downloader (own)",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOZIa7H+019TynHFvYQVwFQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,11 +28,14 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "oDvppGGqbmpr",
+        "id": "aQuWDmfm9YOi",
         "colab_type": "text"
       },
       "source": [
-        "Torrent to Gdrive (Created by Codemaster@BSSG)"
+        "## Torrent to Gdrive (Created by Codemaster@BSSG)\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -44,49 +46,7 @@
       },
       "source": [
         "**Important Note:** To get more disk space:\n",
-        "> Go to Runtime -> Change Runtime and give GPU as the Hardware Accelerator."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Uf90U73y9YOj",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Mount Google Drive\n",
-        "To stream files we need to mount Google Drive.Better run with unlimited googledrive or Team Drive which you can purchase only with 1000 mmk :3"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "nBwi7LSecKzG",
-        "outputId": "8cbfa61b-2e0b-4571-9159-bdd8c83c75be",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 124
-        }
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "\n",
-        "drive.mount(\"/content/drive\")"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
-        }
+        "> Go to Runtime -> Change Runtime and give GPU as the Hardware Accelerator. "
       ]
     },
     {
@@ -104,7 +64,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "m6hF0emftx4h",
-        "outputId": "6c7034d9-d817-4331-e4f1-2ff56f25ee11",
+        "outputId": "3c64a23f-c924-4c23-94c3-ee6619a98e79",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 538
@@ -119,7 +79,7 @@
         "ses.listen_on(6881, 6891)\n",
         "downloads = []"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,9 +101,9 @@
             "After this operation, 5,718 kB of additional disk space will be used.\n",
             "Get:1 http://archive.ubuntu.com/ubuntu bionic/universe amd64 libtorrent-rasterbar9 amd64 1.1.5-1build1 [1,258 kB]\n",
             "Get:2 http://archive.ubuntu.com/ubuntu bionic/universe amd64 python3-libtorrent amd64 1.1.5-1build1 [310 kB]\n",
-            "Fetched 1,569 kB in 1s (1,777 kB/s)\n",
+            "Fetched 1,569 kB in 0s (12.4 MB/s)\n",
             "Selecting previously unselected package libtorrent-rasterbar9.\n",
-            "(Reading database ... 134443 files and directories currently installed.)\n",
+            "(Reading database ... 145113 files and directories currently installed.)\n",
             "Preparing to unpack .../libtorrent-rasterbar9_1.1.5-1build1_amd64.deb ...\n",
             "Unpacking libtorrent-rasterbar9 (1.1.5-1build1) ...\n",
             "Selecting previously unselected package python3-libtorrent.\n",
@@ -158,6 +118,32 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Uf90U73y9YOj",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Mount Google Drive\n",
+        "To stream files we need to mount Google Drive.Better run with unlimited googledrive or Team Drive which you can purchase only with 1000 mmk :3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "oWM9l2fvtuvO",
+        "colab": {}
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "\n",
+        "drive.mount(\"/content/drive\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -206,11 +192,7 @@
       "metadata": {
         "id": "Cwi1GMlxy3te",
         "colab_type": "code",
-        "outputId": "9dadb6cd-bc84-4400-8283-4e35933edd9b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 72
-        }
+        "colab": {}
       },
       "source": [
         "params = {\"save_path\": \"/content/drive/My Drive/Torrent\"}\n",
@@ -224,16 +206,7 @@
         "    )\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Enter Magnet Link Or Type Exit: magnet:?xt=urn:btih:03c1ed36120068c02b7e24528a11f40e8d84fb33&dn=%5BJAV%5D%20%5BUncensored%5D%20MIDE-193%20Uncensored%20Leaked%20%E7%A5%9E%E5%92%B2%E8%A9%A9%E7%B9%94%E3%81%8C%E3%81%82%E3%81%AA%E3%81%9F%E3%81%AE%E3%81%8A%E5%AB%81%E3%81%95%E3%82%93%20%E3%83%A2%E3%82%B6%E3%82%A4%E3%82%AF%E7%A0%B4%E5%A3%8A%E7%89%88%20%5B1080p%5D&tr=http%3A%2F%2Fsukebei.tracker.wf%3A8888%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce\n",
-            "Enter Magnet Link Or Type Exit: exit\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -251,13 +224,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "DBNoYYoSuDBT",
-        "outputId": "f516856f-f789-4bbb-cd22-792ea9dda561",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 241
-        }
+        "colab": {}
       },
       "source": [
+        "#@title Default title text\n",
         "import time\n",
         "from IPython.display import display\n",
         "import ipywidgets as widgets\n",
@@ -309,32 +279,7 @@
         "    time.sleep(1)\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-4fb61c2df196>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mstep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.01\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdisabled\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlayout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstyle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstyle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     )\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdownloads\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m ]\n\u001b[1;32m     24\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdownload_bars\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'downloads' is not defined"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ja8gdfHUguPG",
-        "colab_type": "text"
-      },
-      "source": [
-        "Hope You Enjoy. \n",
-        "\n",
-        "Sincerly,\n",
-        "BSSG Admin Team"
-      ]
+      "outputs": []
     }
   ]
 }
