--- a/codemaster.ipynb
+++ b/codemaster.ipynb
@@ -64,11 +64,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "m6hF0emftx4h",
-        "outputId": "3c64a23f-c924-4c23-94c3-ee6619a98e79",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 538
-        }
+        "colab": {}
       },
       "source": [
         "!apt install python3-libtorrent\n",
@@ -79,45 +75,8 @@
         "ses.listen_on(6881, 6891)\n",
         "downloads = []"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "The following package was automatically installed and is no longer required:\n",
-            "  libnvidia-common-430\n",
-            "Use 'apt autoremove' to remove it.\n",
-            "The following additional packages will be installed:\n",
-            "  libtorrent-rasterbar9\n",
-            "Suggested packages:\n",
-            "  libtorrent-rasterbar-dbg\n",
-            "The following NEW packages will be installed:\n",
-            "  libtorrent-rasterbar9 python3-libtorrent\n",
-            "0 upgraded, 2 newly installed, 0 to remove and 25 not upgraded.\n",
-            "Need to get 1,569 kB of archives.\n",
-            "After this operation, 5,718 kB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu bionic/universe amd64 libtorrent-rasterbar9 amd64 1.1.5-1build1 [1,258 kB]\n",
-            "Get:2 http://archive.ubuntu.com/ubuntu bionic/universe amd64 python3-libtorrent amd64 1.1.5-1build1 [310 kB]\n",
-            "Fetched 1,569 kB in 0s (12.4 MB/s)\n",
-            "Selecting previously unselected package libtorrent-rasterbar9.\n",
-            "(Reading database ... 145113 files and directories currently installed.)\n",
-            "Preparing to unpack .../libtorrent-rasterbar9_1.1.5-1build1_amd64.deb ...\n",
-            "Unpacking libtorrent-rasterbar9 (1.1.5-1build1) ...\n",
-            "Selecting previously unselected package python3-libtorrent.\n",
-            "Preparing to unpack .../python3-libtorrent_1.1.5-1build1_amd64.deb ...\n",
-            "Unpacking python3-libtorrent (1.1.5-1build1) ...\n",
-            "Setting up libtorrent-rasterbar9 (1.1.5-1build1) ...\n",
-            "Setting up python3-libtorrent (1.1.5-1build1) ...\n",
-            "Processing triggers for libc-bin (2.27-3ubuntu1) ...\n",
-            "/sbin/ldconfig.real: /usr/local/lib/python3.6/dist-packages/ideep4py/lib/libmkldnn.so.0 is not a symbolic link\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
