--- a/All_in_One.ipynb
+++ b/All_in_One.ipynb
@@ -36,7 +36,7 @@
         "4rMlpsk3jv5r",
         "gz_8S4IOni_1"
       ],
-      "authorship_tag": "ABX9TyPlUoQsbafQvxDy9ImvjMsm",
+      "authorship_tag": "ABX9TyMIU6wJsmomssWR1hO6bkL3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -476,7 +476,7 @@
         "\n",
         "#\n",
         "\n",
-        "URL = \"http://rapidleechmaster.herokuapp.com/files/Milfy_City-06e-pc.zip\" #@param {type:\"string\"}\n",
+        "URL = \"\" #@param {type:\"string\"}\n",
         "#@markdown <center><h5>Default output path <b>/content/drive/My Drive/DirectDownload</b></h5></center>\n",
         "OUTPUT_PATH = \"\" #@param {type:\"string\"}\n",
         "\n",
@@ -1119,7 +1119,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "cellView": "both",
+        "cellView": "form",
         "id": "lrCc585SD2f7",
         "colab": {}
       },
