--- a/All_in_One.ipynb
+++ b/All_in_One.ipynb
@@ -13,7 +13,6 @@
         "StT2bKf2WmKj",
         "Ttv0CeCqLX0t",
         "7dTNq8TFD6a-",
-        "8YFON0D4mVdr",
         "SoxLe8ciEyAc",
         "WanlireZOjvx",
         "6wktcwkWtHH0",
@@ -1119,7 +1118,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "cellView": "form",
+        "cellView": "both",
         "id": "lrCc585SD2f7",
         "colab": {}
       },
