--- a/All_in_One.ipynb
+++ b/All_in_One.ipynb
@@ -35,7 +35,7 @@
         "4rMlpsk3jv5r",
         "gz_8S4IOni_1"
       ],
-      "authorship_tag": "ABX9TyMIU6wJsmomssWR1hO6bkL3",
+      "authorship_tag": "ABX9TyPDoAfc5XOn4cnUh7P+SHTG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -620,7 +620,7 @@
       "source": [
         "# ============================= FORM ============================= #\n",
         "# @markdown #### ⬅️ Execute JDownloader\n",
-        "NEW_Account = True  # @param {type:\"boolean\"}\n",
+        "NEW_Account = False  # @param {type:\"boolean\"}\n",
         "# ================================================================ #\n",
         "\n",
         "from os import path as _p\n",
@@ -1473,7 +1473,7 @@
       "metadata": {
         "id": "92bz-A8-ZBHM",
         "colab_type": "code",
-        "cellView": "both",
+        "cellView": "form",
         "colab": {}
       },
       "source": [
@@ -1486,7 +1486,10 @@
         "\n",
         "Version = '1.2.0'\n",
         "\n",
-        "#####################################\n",
+        "\n",
+        "\n",
+        "\n",
+        "apt-get install python2.7 git python-opensslapt-get install python2.7 git python-opensslapt-get install python2.7 git python-opensslapt-get install python2.7 git python-opensslapt-get install python2.7 git python-opensslapt-get install python2.7 git python-opensslapt-get install python2.7 git python-opensslapt-get install python2.7 git python-opensslapt-get install python2.7 git python-openssl#################################\n",
         "USE_FREE_TOKEN = True  # @param {type:\"boolean\"}\n",
         "\n",
         "TOKEN = \"\"  # @param {type:\"string\"}\n",
@@ -1835,13 +1838,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UinZqhU6XBKF",
         "colab_type": "code",
         "cellView": "form",
+        "id": "Qa0LbpPoaueF",
         "colab": {}
       },
       "source": [
         "#@markdown <h3>← Click Here to Use NZBget (<i>ngrok</i>)</h3>\n",
+        "#@markdown <center>Creat an account and Get Free Token  <a href=\"https://dashboard.ngrok.com/auth\">Here</a>  \n",
         "Ngrok_Token = \"\" #@param {type:\"string\"}\n",
         "\n",
         "import os, psutil, uuid, time, urllib.request, json; from IPython.display import clear_output\n",
@@ -2424,8 +2428,8 @@
       "source": [
         "# ============================= FORM ============================= #\n",
         "# @markdown #### ⬅️ Execute Upload Local File\n",
-        "MODE = \"RCONFIG_append\"  # @param ['UTILS', 'RCONFIG', 'RCONFIG_append', \"GENERATELIST\"]\n",
-        "REMOTE = \"https://web.avjie.com/files/Brooklyn.Nine-Nine.S07E02.Captain.Kim.1080p.AMZN.WEB-DL.DDP5.1.H.264-NTb.mkv\"  # @param {type:\"string\"}\n",
+        "MODE = \"RCONFIG\"  # @param ['UTILS', 'RCONFIG', 'RCONFIG_append', \"GENERATELIST\"]\n",
+        "REMOTE = \"\"  # @param {type:\"string\"}\n",
         "QUERY_PATTERN = \"\"  # @param {type:\"string\"}\n",
         "# @markdown #### <font size=1px>For not able to upload local file : https://stackoverflow.com/a/58661947</font>\n",
         "# ================================================================ #\n",
@@ -2636,98 +2640,6 @@
         "            time.sleep(Loop_Interval)\n",
         "except:\n",
         "  clear_output()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kAdRu4gm5k8v",
-        "colab_type": "text"
-      },
-      "source": [
-        "<img src='https://yuju.pw/y/qUkg.png' height=\"65\" alt=\"7zip\"> 7-Zip + UNRAR"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "MXv72l138scn",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
-      },
-      "source": [
-        "#@markdown <h3><b>←</b> <i>Required:</i> Install 7-Zip + UNRAR\n",
-        "!sudo apt update\n",
-        "!sudo apt install p7zip-full p7zip-rar unrar rar"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "cellView": "form",
-        "id": "VjDJz38G9fqo",
-        "colab": {}
-      },
-      "source": [
-        "#@markdown <h3>» Run to change current working directory\n",
-        "import os\n",
-        "new_dir = \"\" #@param {type:\"string\"}\n",
-        "\n",
-        "%cd \"$new_dir\""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QTmQKpsm8fFQ",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
-      },
-      "source": [
-        "#@title » Extract Archive (<i>.zip, .rar, .7z, etc.</i>)\n",
-        "import os, sys, re\n",
-        "\n",
-        "archive_file_path = \"\" #@param {type:\"string\"}\n",
-        "os.environ['inputFile'] = archive_file_path\n",
-        "\n",
-        "!7z e \"$inputFile\""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "cellView": "form",
-        "id": "pWKlqyFP_qkX",
-        "colab": {}
-      },
-      "source": [
-        "#@title » Create .zip from Folder\n",
-        "import os, sys, re\n",
-        "\n",
-        "folder_path = \"\" #@param {type:\"string\"}\n",
-        "\n",
-        "output_file_path = re.search(\"^[\\/].+\\/\", folder_path)\n",
-        "output_file_path_raw = output_file_path.group(0)\n",
-        "delsplit = re.search(\"\\/(?:.(?!\\/))+$\", folder_path)\n",
-        "folder_name = re.sub(\"^[\\/]\", \"\", delsplit.group(0))\n",
-        "\n",
-        "os.environ['inputDir'] = folder_path\n",
-        "os.environ['outputPath'] = output_file_path_raw\n",
-        "os.environ['folderName'] = folder_name\n",
-        "\n",
-        "!7z a -tzip \"$outputPath\"/\"$folderName\".zip \"$inputDir\""
       ],
       "execution_count": 0,
       "outputs": []
