--- a/All_in_One.ipynb
+++ b/All_in_One.ipynb
@@ -7,8 +7,10 @@
       "provenance": [],
       "collapsed_sections": [
         "zRTgBdCpBWMh",
-        "4E-uzYrv5o0B",
+        "bNAroQWy6hL3",
+        "wZMZjX127rmx",
         "ercDPZ6CIlVz",
+        "4E-uzYrv5o0B",
         "JnIOQZ2I-aDT",
         "StT2bKf2WmKj",
         "Ttv0CeCqLX0t",
@@ -26,23 +28,27 @@
         "kSvUMUuTPX7r",
         "zajDdD9kKNw9",
         "mtIWnZ60Sczn",
-        "jWNiE-RGECHM",
+        "yTPpo294F0U8",
+        "n3MWoStHEnJx",
+        "DYreGU9NvCdk",
+        "OSG8fIhSAmZ-",
         "ukxnQC4c0nuR",
         "0xI8WiUPji3k",
         "QlsUJhNwyeV3",
         "FVvFaJrZ0bxg",
         "INCWjTDRLye6",
         "4rMlpsk3jv5r",
-        "gz_8S4IOni_1"
+        "-9RhonZDwNYC"
       ],
-      "authorship_tag": "ABX9TyPDoAfc5XOn4cnUh7P+SHTG",
+      "machine_shape": "hm",
+      "authorship_tag": "ABX9TyNgoEGYf84khWPF5ZqeU6Zp",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
     },
-    "accelerator": "GPU"
+    "accelerator": "TPU"
   },
   "cells": [
     {
@@ -207,6 +213,43 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "colab_type": "text",
+        "id": "ercDPZ6CIlVz"
+      },
+      "source": [
+        "# <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Google_Drive_logo.png/600px-Google_Drive_logo.png\" height=30px>      ___Mount / Unmount Gdrive!___"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "cellView": "form",
+        "id": "U2avD1zRIlWA",
+        "colab": {}
+      },
+      "source": [
+        "#@markdown <br><center><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Google_Drive_logo.png/600px-Google_Drive_logo.png' height=\"50\" alt=\"Gdrive logo\"/></center>\n",
+        "#@markdown <center><h3>Mount Gdrive to /content/drive</h3></center><br>\n",
+        "MODE = \"MOUNT\" #@param [\"MOUNT\", \"UNMOUNT\"]\n",
+        "#Mount your Gdrive! \n",
+        "from google.colab import drive\n",
+        "drive.mount._DEBUG = False\n",
+        "if MODE == \"MOUNT\":\n",
+        "  drive.mount('/content/drive', force_remount=True)\n",
+        "elif MODE == \"UNMOUNT\":\n",
+        "  try:\n",
+        "    drive.flush_and_unmount()\n",
+        "  except ValueError:\n",
+        "    pass\n",
+        "  get_ipython().system_raw(\"rm -rf /root/.config/Google/DriveFS\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "4E-uzYrv5o0B",
         "colab_type": "text"
       },
@@ -318,43 +361,6 @@
         "else:\n",
         "  print(\"\\n\\nNot succeeded. No files or directories in mounted location. \\nCheck your config name and content. If the rclone command was not found, run the cell above.\\n\\n\")\n",
         "  print(\"log:\\n\", nohupText)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "ercDPZ6CIlVz"
-      },
-      "source": [
-        "# <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Google_Drive_logo.png/600px-Google_Drive_logo.png\" height=30px>      ___Mount / Unmount Gdrive!___"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "cellView": "form",
-        "id": "U2avD1zRIlWA",
-        "colab": {}
-      },
-      "source": [
-        "#@markdown <br><center><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Google_Drive_logo.png/600px-Google_Drive_logo.png' height=\"50\" alt=\"Gdrive logo\"/></center>\n",
-        "#@markdown <center><h3>Mount Gdrive to /content/drive</h3></center><br>\n",
-        "MODE = \"MOUNT\" #@param [\"MOUNT\", \"UNMOUNT\"]\n",
-        "#Mount your Gdrive! \n",
-        "from google.colab import drive\n",
-        "drive.mount._DEBUG = False\n",
-        "if MODE == \"MOUNT\":\n",
-        "  drive.mount('/content/drive', force_remount=True)\n",
-        "elif MODE == \"UNMOUNT\":\n",
-        "  try:\n",
-        "    drive.flush_and_unmount()\n",
-        "  except ValueError:\n",
-        "    pass\n",
-        "  get_ipython().system_raw(\"rm -rf /root/.config/Google/DriveFS\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -620,6 +626,7 @@
       "source": [
         "# ============================= FORM ============================= #\n",
         "# @markdown #### ⬅️ Execute JDownloader\n",
+        "# @markdown Example : totalleecher@gmail.com\n",
         "NEW_Account = False  # @param {type:\"boolean\"}\n",
         "# ================================================================ #\n",
         "\n",
@@ -1118,7 +1125,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "cellView": "both",
+        "cellView": "form",
         "id": "lrCc585SD2f7",
         "colab": {}
       },
@@ -1950,9 +1957,12 @@
         "# ============================= FORM ============================= #\n",
         "# @markdown #### ⬅️ Execute rClone\n",
         "\n",
+        "%cd /content/drive/My Drive\n",
+        "%mkdir rClone\n",
+        "\n",
         "# @markdown ##### Quick move (Select and leave all boxes):\n",
         "# @markdown #####{\n",
-        "Quick_Move = \"None\"  # @param [\"None\",\"simpleTorrent\", \"Peerflix\", \"qBittorrent\", \"extract\", \"error\"]\n",
+        "Quick_Move = \"qBittorrent\"  # @param [\"None\",\"simpleTorrent\", \"Peerflix\", \"qBittorrent\", \"extract\", \"error\"]\n",
         "# @markdown #####}\n",
         "\n",
         "Mode = \"Move\"  # @param [\"Move\", \"Copy\", \"Sync\", \"Verify\", \"Dedupe\", \"Clean Empty Dirs\", \"Empty Trash\"]\n",
@@ -1984,19 +1994,19 @@
         "elif Quick_Move == \"simpleTorrent\" and Source == \"\" and Destination == \"\":\n",
         "  Mode = \"Move\"\n",
         "  Source = \"/content/downloads\"\n",
-        "  Destination = \"/content/drive/My Drive\" \n",
+        "  Destination = \"/content/drive/My Drive/rCLone\" \n",
         "elif Quick_Move == \"Peerflix\" and Source == \"\" and Destination == \"\":\n",
         "  Mode = \"Move\"\n",
         "  Source = \"/content/peerflix\"\n",
-        "  Destination = \"/content/drive/My Drive\" \n",
+        "  Destination = \"/content/drive/My Drive/rClone\" \n",
         "elif Quick_Move == \"qBittorrent\" and Source == \"\" and Destination == \"\":\n",
         "  Mode = \"Move\"\n",
         "  Source = \"/content/qBittorrent\"\n",
-        "  Destination = \"/content/drive/My Drive\"\n",
+        "  Destination = \"/content/drive/My Drive/rClone\"\n",
         "elif Quick_Move == \"extract\" and Source == \"\" and Destination == \"\":\n",
         "  Mode = \"Move\"\n",
         "  Source = \"/content/extract\"\n",
-        "  Destination = \"/content/drive/My Drive\"\n",
+        "  Destination = \"/content/drive/My Drive/rClone\"\n",
         "elif Quick_Move == \"error\":\n",
         "  raise Exception(\"You are selected Error!\")\n",
         "\n",
@@ -4099,8 +4109,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gz_8S4IOni_1",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "-9RhonZDwNYC"
       },
       "source": [
         "# <img src='https://blobscdn.gitbook.com/v0/b/gitbook-28427.appspot.com/o/spaces%2F-LV-MXWFGfo4YU_ahhaj%2Favatar.png?generation=1546194591038935&alt=media' height=\"25\" alt=\"filebrowser\" /> ___filebrowser___"
@@ -4169,8 +4179,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ycojNKNxkeLP",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "ixPzmxtjwNYa"
       },
       "source": [
         ""
